fix align

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 	height: 20vh;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 
 }
 
